--- a/config.env
+++ b/config.env
@@ -1,16 +1,17 @@
---- Configuration for BBC Sport Scraping ---
-1. TEAM_SLUG: The URL-friendly name for your team on BBC Sport (e.g., cardiff-city)
-TEAM_SLUG=cardiff-city
+# --- Configuration for BBC Sport Scraping ---
 
-2. LEAGUE_SLUG: The URL-friendly name for the current league (e.g., league-one)
-LEAGUE_SLUG=league-one
+# 1. TEAM_SLUG: The URL-friendly name for your team on BBC Sport (e.g., cardiff-city)
+TEAM_SLUG="cardiff-city"
 
-3. LEAGUE_NAME: The human-readable name of the league (for displaying in the final JSON)
-LEAGUE_NAME=League One
+# 2. LEAGUE_SLUG: The URL-friendly name for the current league (e.g., league-one)
+LEAGUE_SLUG="league-one"
 
-4. CURRENT_SEASON: The current season year (used for generating fixture URLs/ICS files)
-CURRENT_SEASON=2025/2026
+# 3. LEAGUE_NAME: The human-readable name of the league (for displaying in the final JSON)
+LEAGUE_NAME="League One"
 
---- Maintenance Notes ---
-When your team changes league (promotion/relegation) or a new season starts,
-you only need to update the three variables above and commit this file.
+# 4. CURRENT_SEASON: The current season year (used for generating fixture URLs/ICS files)
+CURRENT_SEASON="2025/2026"
+
+# --- Maintenance Notes ---
+# When your team changes league (promotion/relegation) or a new season starts,
+# you only need to update the variables above and commit this file.
